# File-sending

./: .gitignore  CMakeLists.txt  README.md
src/: FileServer.cpp  FileServer.h  main.cpp
src/server/: FileServer.cpp  FileServer.h
src/transfer/: FileTransfer.cpp  FileTransfer.h
src/ui/: MainWindow.cpp  MainWindow.h
